--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/powerBuyWhite"
-    tools:context="cenergy.central.com.pwb_store.activity.ProductDetailActivity2">
+    tools:context="cenergy.central.com.pwb_store.activity.ProductDetailActivity">
 
     <!-- region actionbar-->
     <include
