--- a/app/src/main/res/layout/activity_product_detail2.xml
+++ b/app/src/main/res/layout/activity_product_detail2.xml
@@ -73,4 +73,11 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/actionbar"/>
 
+    <cenergy.central.com.pwb_store.view.VersionWatermarkView
+        android:id="@+id/watermarkView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
