--- a/app/src/main/res/layout/fragment_product_overview.xml
+++ b/app/src/main/res/layout/fragment_product_overview.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/powerBuyWhite"
+    android:background="@color/white"
     android:focusableInTouchMode="true"
     android:orientation="vertical"
     android:paddingBottom="16dp">
@@ -56,7 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@color/powerBuyWhite"
+        android:background="@color/white"
         android:paddingBottom="16dp"
         android:paddingLeft="32dp"
         android:paddingRight="32dp"
@@ -116,7 +116,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@color/powerBuyWhite"
+        android:background="@color/white"
         android:paddingBottom="16dp"
         android:paddingLeft="32dp"
         android:paddingRight="32dp"
