--- a/app/src/cds/res/layout/app_bar_main.xml
+++ b/app/src/cds/res/layout/app_bar_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/app_bar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/powerBuyWhite"
+    android:background="@color/white"
     android:fitsSystemWindows="true">
 
     <android.support.v7.widget.Toolbar
