--- a/app/src/cds/res/layout/app_bar_payment.xml
+++ b/app/src/cds/res/layout/app_bar_payment.xml
@@ -6,7 +6,7 @@
     android:id="@+id/app_bar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/powerBuyWhite"
+    android:background="@color/white"
     android:fitsSystemWindows="true"
     tools:context=".activity.CompareActivity">
 
