--- a/app/src/cds/res/layout/drawer_user.xml
+++ b/app/src/cds/res/layout/drawer_user.xml
@@ -4,7 +4,7 @@
     android:id="@+id/layout_header_user"
     android:layout_width="match_parent"
     android:layout_height="130dp"
-    android:background="@color/colorPrimaryRed"
+    android:background="@color/colorPrimary"
     android:orientation="horizontal"
     android:paddingStart="16dp"
     android:paddingLeft="16dp"
