--- a/app/src/main/res/drawable/bg_purple_out_line.xml
+++ b/app/src/main/res/drawable/bg_purple_out_line.xml
@@ -5,5 +5,5 @@
     <solid android:color="@color/colorPrimary" />
     <stroke
         android:width="1dp"
-        android:color="@color/powerBuyWhite" />
+        android:color="@color/white" />
 </shape>
