--- a/app/src/main/res/layout/activity_product_list.xml
+++ b/app/src/main/res/layout/activity_product_list.xml
@@ -14,7 +14,7 @@
             android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/powerBuyWhite"
+            android:background="@color/white"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
     <cenergy.central.com.pwb_store.view.NetworkStateView
