--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.ShoppingCartActivity"
-    android:background="@color/powerBuyWhite">
+    android:background="@color/white">
 
     <include
         android:id="@+id/actionbar"
@@ -44,7 +44,7 @@
             android:layout_height="0dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
-            android:background="@color/powerBuyWhite"
+            android:background="@color/white"
             android:clipToPadding="false"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
