--- a/app/src/main/res/layout/calendar_layout.xml
+++ b/app/src/main/res/layout/calendar_layout.xml
@@ -33,7 +33,7 @@
             android:gravity="center"
             android:maxLines="2"
             tools:text="Date"
-            android:textColor="@color/powerBuyWhite"
+            android:textColor="@color/white"
             android:textSize="22sp"
             android:textStyle="bold"
             tools:ignore="RelativeOverlap" />
@@ -53,7 +53,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:background="@color/powerBuyWhite"
+        android:background="@color/white"
         android:orientation="horizontal"
         android:paddingBottom="4dp"
         android:paddingTop="4dp">
