--- a/app/src/main/res/layout/fragment_compare.xml
+++ b/app/src/main/res/layout/fragment_compare.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/powerBuyWhite">
+    android:background="@color/white">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
@@ -13,7 +13,7 @@
         android:paddingEnd="4dp"
         android:paddingLeft="4dp"
         android:paddingRight="4dp"
-        android:background="@color/powerBuyWhite">
+        android:background="@color/white">
 
     </android.support.v7.widget.RecyclerView>
 
