--- a/app/src/main/res/layout/fragment_payment_select_methods.xml
+++ b/app/src/main/res/layout/fragment_payment_select_methods.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/powerBuyWhite">
+    android:background="@color/white">
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
         android:id="@+id/title_select_methods"
