--- a/app/src/main/res/layout/fragment_payment_success.xml
+++ b/app/src/main/res/layout/fragment_payment_success.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/powerBuyWhite"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <android.support.v7.widget.CardView
