--- a/app/src/main/res/layout/fragment_product_list.xml
+++ b/app/src/main/res/layout/fragment_product_list.xml
@@ -211,7 +211,7 @@
             android:text="@string/loading"
             android:layout_marginStart="6dp"
             style="@style/textNameProduct"
-            android:textColor="@color/powerBuyWhite"
+            android:textColor="@color/white"
             android:textSize="16sp"/>
 
     </LinearLayout>
