--- a/app/src/main/res/layout/fragment_spec.xml
+++ b/app/src/main/res/layout/fragment_spec.xml
@@ -8,7 +8,7 @@
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/powerBuyWhite">
+        android:background="@color/white">
 
     </android.support.v7.widget.RecyclerView>
 
