--- a/app/src/main/res/layout/fragment_stores.xml
+++ b/app/src/main/res/layout/fragment_stores.xml
@@ -9,7 +9,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/select_store_title"
-        android:textColor="@color/powerBuyWhite"
+        android:textColor="@color/white"
         android:background="@color/colorPrimary"
         android:textSize="18sp"
         android:padding="16dp"
