--- a/app/src/main/res/layout/fragment_web_view.xml
+++ b/app/src/main/res/layout/fragment_web_view.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/powerBuyWhite">
+    android:background="@color/white">
 
     <ProgressBar
         android:id="@+id/progress_bar"
@@ -18,5 +18,5 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:background="@color/powerBuyWhite"/>
+        android:background="@color/white"/>
 </RelativeLayout>
