--- a/app/src/main/res/layout/list_item_grid_compare_detail.xml
+++ b/app/src/main/res/layout/list_item_grid_compare_detail.xml
@@ -32,6 +32,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:overScrollMode="never"
-        android:background="@color/powerBuyWhite"/>
+        android:background="@color/white"/>
 
 </RelativeLayout>
