--- a/app/src/main/res/layout/list_item_history.xml
+++ b/app/src/main/res/layout/list_item_history.xml
@@ -7,7 +7,7 @@
     android:layout_marginBottom="8dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/powerBuyWhite"
+    android:background="@color/white"
     app:cardCornerRadius="10dp">
 
     <android.support.constraint.ConstraintLayout
