--- a/app/src/main/res/layout/list_item_product_spec_text_detail.xml
+++ b/app/src/main/res/layout/list_item_product_spec_text_detail.xml
@@ -38,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_toRightOf="@+id/text_header"
-            android:background="@color/powerBuyWhite">
+            android:background="@color/white">
 
             <cenergy.central.com.pwb_store.view.PowerBuyTextView
                 android:id="@+id/text_detail"
