--- a/app/src/main/res/layout/list_item_text_banner.xml
+++ b/app/src/main/res/layout/list_item_text_banner.xml
@@ -6,7 +6,7 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/powerBuyWhite"
+    android:background="@color/white"
     app:cardCornerRadius="0dp"
     app:cardElevation="0dp">
 
