--- a/app/src/main/res/layout/popup_filter.xml
+++ b/app/src/main/res/layout/popup_filter.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/recycler_view_filter"
-    android:background="@color/powerBuyWhite"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
