--- a/app/src/main/res/layout/view_increase_or_decrease_qty.xml
+++ b/app/src/main/res/layout/view_increase_or_decrease_qty.xml
@@ -28,7 +28,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_margin="0dp"
-            android:background="@color/powerBuyWhite"
+            android:background="@color/white"
             android:contentDescription="@string/app_name"
             android:padding="0dp"
             android:src="@drawable/ic_remove" />
@@ -60,7 +60,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@color/powerBuyWhite"
+            android:background="@color/white"
             android:contentDescription="@string/app_name"
             android:padding="0dp"
             android:src="@drawable/ic_add" />
