--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -189,7 +189,7 @@
 
     <style name="Button.Primary" parent="Base.Widget.AppCompat.Button.Borderless">
         <item name="android:background">@drawable/btn_primary</item>
-        <item name="android:textColor">@color/powerBuyWhite</item>
+        <item name="android:textColor">@color/white</item>
         <item name="elevation">4dp</item>
     </style>
 
