--- a/app/src/cds/res/layout/app_bar_main.xml
+++ b/app/src/cds/res/layout/app_bar_main.xml
@@ -5,14 +5,14 @@
     android:id="@+id/app_bar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="@color/graySelect"
     android:fitsSystemWindows="true">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
+        android:background="@color/white"
         android:focusableInTouchMode="true"
         app:theme="@style/ToolbarColoredBackArrow"
         app:contentInsetEnd="0dp"
