--- a/app/src/cds/res/layout/app_bar_product.xml
+++ b/app/src/cds/res/layout/app_bar_product.xml
@@ -6,6 +6,7 @@
     android:id="@+id/app_bar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/graySelect"
     android:fitsSystemWindows="true"
     tools:context=".activity.ProductListActivity">
 
@@ -13,7 +14,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
-        android:background="@color/colorPrimary"
+        android:background="@color/white"
         android:theme="@style/ToolbarBack"
         app:contentInsetEnd="0dp"
         app:contentInsetLeft="0dp"
@@ -43,7 +44,7 @@
             android:layout_centerInParent="true"
             android:layout_gravity="end|center_vertical"
             android:layout_marginEnd="10dp"
-            android:src="@drawable/ic_search_bar"
+            android:src="@drawable/ic_search_bar_cds"
             android:background="?android:attr/selectableItemBackground"
             android:contentDescription="@string/app_name"/>
 
