--- a/app/src/main/res/drawable/ic_cart_white.xml
+++ b/app/src/main/res/drawable/ic_cart_white.xml
@@ -1,4 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="30"
-    android:viewportWidth="30" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FFFFFF" android:pathData="M10.6,17.3C10.6,17.3 10.6,17.3 10.6,17.3l-3,-9.2c0,0 0,0 0,0L6.7,5.3H4.2c-0.3,0 -0.6,-0.3 -0.6,-0.6c0,-0.3 0.3,-0.6 0.6,-0.6h2.7c0.4,0 0.7,0.2 0.7,0.6l0.9,2.6h16.6c0.7,0 1.3,0.6 1.3,1.3l0,0.2l-1.9,6.6c-0.2,1.3 -1.4,2.3 -2.8,2.3h-9.8l0.7,2.1h11.1c0.3,0 0.6,0.3 0.6,0.6c0,0.3 -0.3,0.6 -0.6,0.6H12.3c-0.4,0 -0.7,-0.2 -0.7,-0.6C11.6,20.3 10.6,17.3 10.6,17.3zM11.5,16.6h10.2c0.8,0 1.5,-0.6 1.7,-1.4l1.9,-6.5c0,-0.1 -0.1,-0.1 -0.2,-0.1H8.9L11.5,16.6L11.5,16.6zM15.5,23.9c0,-0.5 -0.4,-0.9 -0.9,-0.9c-0.5,0 -0.9,0.4 -0.9,0.9c0,0.5 0.4,0.9 0.9,0.9C15.1,24.7 15.5,24.3 15.5,23.9zM16.6,23.9c0,1.1 -0.9,2 -2,2c-1.1,0 -2,-0.9 -2,-2c0,0 0,0 0,0c0,-1.1 0.9,-2 2,-2S16.6,22.8 16.6,23.9zM22,23.9c0,-0.5 -0.4,-0.9 -0.9,-0.9c-0.5,0 -0.9,0.4 -0.9,0.9c0,0.5 0.4,0.9 0.9,0.9C21.6,24.7 22,24.3 22,23.9zM23.1,23.9c0,1.1 -0.9,2 -2,2c-1.1,0 -2,-0.9 -2,-2c0,0 0,0 0,0c0,-1.1 0.9,-2 2,-2S23.1,22.8 23.1,23.9z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:height="24dp"
+        android:viewportHeight="30"
+        android:viewportWidth="30"
+        android:width="24dp">
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M10.6,17.3C10.6,17.3 10.6,17.3 10.6,17.3l-3,-9.2c0,0 0,0 0,0L6.7,5.3H4.2c-0.3,0 -0.6,-0.3 -0.6,-0.6c0,-0.3 0.3,-0.6 0.6,-0.6h2.7c0.4,0 0.7,0.2 0.7,0.6l0.9,2.6h16.6c0.7,0 1.3,0.6 1.3,1.3l0,0.2l-1.9,6.6c-0.2,1.3 -1.4,2.3 -2.8,2.3h-9.8l0.7,2.1h11.1c0.3,0 0.6,0.3 0.6,0.6c0,0.3 -0.3,0.6 -0.6,0.6H12.3c-0.4,0 -0.7,-0.2 -0.7,-0.6C11.6,20.3 10.6,17.3 10.6,17.3zM11.5,16.6h10.2c0.8,0 1.5,-0.6 1.7,-1.4l1.9,-6.5c0,-0.1 -0.1,-0.1 -0.2,-0.1H8.9L11.5,16.6L11.5,16.6zM15.5,23.9c0,-0.5 -0.4,-0.9 -0.9,-0.9c-0.5,0 -0.9,0.4 -0.9,0.9c0,0.5 0.4,0.9 0.9,0.9C15.1,24.7 15.5,24.3 15.5,23.9zM16.6,23.9c0,1.1 -0.9,2 -2,2c-1.1,0 -2,-0.9 -2,-2c0,0 0,0 0,0c0,-1.1 0.9,-2 2,-2S16.6,22.8 16.6,23.9zM22,23.9c0,-0.5 -0.4,-0.9 -0.9,-0.9c-0.5,0 -0.9,0.4 -0.9,0.9c0,0.5 0.4,0.9 0.9,0.9C21.6,24.7 22,24.3 22,23.9zM23.1,23.9c0,1.1 -0.9,2 -2,2c-1.1,0 -2,-0.9 -2,-2c0,0 0,0 0,0c0,-1.1 0.9,-2 2,-2S23.1,22.8 23.1,23.9z"/>
 </vector>
