Add style textNameCategory for CDS

--- a/app/src/cds/res/values/colors.xml
+++ b/app/src/cds/res/values/colors.xml
@@ -5,4 +5,6 @@
 
     <!-- cdsBlack is toolbar icon color -->
     <color name="cdsBlack">#333333</color>
+
+    <color name="cdsRed">@color/colorAccent</color>
 </resources>
