--- a/app/src/cds/res/values/styles.xml
+++ b/app/src/cds/res/values/styles.xml
@@ -20,4 +20,10 @@
         <item name="colorControlHighlight">@color/colorAccent</item>
         <item name="navigationIcon">@drawable/ic_clear_cds</item>
     </style>
+
+    <style name="textNameCategory">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/cdsRed</item>
+    </style>
 </resources>
