Edit color add to cart button for cds

--- a/app/src/cds/res/values/colors.xml
+++ b/app/src/cds/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="cdsBlack">#333333</color>
 
     <color name="cdsRed">@color/colorAccent</color>
+
+    <!-- activity detail -->
+    <color name="addToCartButton">#A6192E</color>
+    <color name="salePrice">#A6192E</color>
 </resources>
