--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:elevation="4dp"
     android:paddingTop="16dp">
 
     <android.support.constraint.Guideline
@@ -152,7 +151,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:textColor="@color/salePriceColor"
+            android:textColor="@color/specialPriceColor"
             android:textSize="20sp"
             app:typeFaceAsset="RobotoLight.ttf"
             tools:text="Price : " />
@@ -162,7 +161,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:textColor="@color/salePriceColor"
+            android:textColor="@color/specialPriceColor"
             android:textSize="20sp"
             app:typeFaceAsset="Roboto-Medium.ttf"
             tools:text="฿2,890" />
