--- a/app/src/main/res/layout/list_item_grid_product.xml
+++ b/app/src/main/res/layout/list_item_grid_product.xml
@@ -130,7 +130,7 @@
                     android:gravity="end"
                     android:maxLines="1"
                     android:padding="5dp"
-                    android:textColor="@color/salePriceColor"
+                    android:textColor="@color/specialPriceColor"
                     android:textSize="14sp"
                     android:textStyle="bold"
                     app:typeFaceAsset="RobotoLight.ttf"
