--- a/app/src/cds/res/values/styles.xml
+++ b/app/src/cds/res/values/styles.xml
@@ -25,5 +25,11 @@
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/cdsRed</item>
+
+        <style name="textCompare">
+            <item name="android:textSize">24sp</item>
+            <item name="android:textStyle">bold</item>
+            <item name="android:textColor">@color/cdsRed</item>
+        </style>
     </style>
 </resources>
