--- a/app/src/main/res/layout/fragment_payment_check_out.xml
+++ b/app/src/main/res/layout/fragment_payment_check_out.xml
@@ -75,7 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/skip"
-            android:textColor="@drawable/text_selector_orange"
+            android:textColor="@drawable/text_selector"
             app:typeFaceAsset="RobotoLight.ttf" />
 
     </LinearLayout>
