--- a/app/src/cds/res/values/colors.xml
+++ b/app/src/cds/res/values/colors.xml
@@ -8,10 +8,14 @@
 
     <color name="cdsRed">@color/colorAccent</color>
 
-    <!-- activity detail -->
+    <!-- drawer sub header -->
+    <color name="drawerSubHeaderColor">#A6192E</color>
+
+    <!-- product detail -->
     <color name="addToCartButton">#A6192E</color>
-    <color name="salePrice">#A6192E</color>
 
     <!-- check out -->
     <color name="checkOutColorButton">#A6192E</color>
+
+    <color name="specialPriceColor">#D0021B</color>
 </resources>
