--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -287,7 +287,7 @@
                 android:layout_marginBottom="8dp"
                 android:layout_weight="1"
                 android:foreground="?android:attr/selectableItemBackground"
-                app:cardBackgroundColor="@color/categoryColor">
+                app:cardBackgroundColor="@color/defaultButtonColor">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -325,7 +325,7 @@
                 android:layout_marginBottom="8dp"
                 android:layout_weight="1"
                 android:foreground="?android:attr/selectableItemBackground"
-                app:cardBackgroundColor="@color/categoryColor">
+                app:cardBackgroundColor="@color/defaultButtonColor">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
