--- a/app/src/main/res/layout/list_item_search_suggestion_header.xml
+++ b/app/src/main/res/layout/list_item_search_suggestion_header.xml
@@ -26,7 +26,7 @@
             android:id="@+id/txt_view_search_query"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/categoryColor"
+            android:textColor="@color/defaultButtonColor"
             android:textSize="16sp"
             android:textStyle="bold"
             tools:text="Camera" />
