--- a/app/src/main/res/layout/list_item_product_spec_add.xml
+++ b/app/src/main/res/layout/list_item_product_spec_add.xml
@@ -25,7 +25,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_alignParentRight="true"
         android:foreground="?attr/selectableItemBackground"
-        app:cardBackgroundColor="@color/categoryColor"
+        app:cardBackgroundColor="@color/defaultButtonColor"
         android:layout_marginRight="16dp"
         android:layout_marginTop="16dp">
 
