--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
     </style>
 
     <style name="AlertDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
-        <item name="colorAccent">@color/categoryColor</item>
+        <item name="colorAccent">@color/defaultButtonColor</item>
     </style>
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
@@ -43,27 +43,15 @@
         <item name="android:textColor">@color/contentTextColor</item>
     </style>
 
-    <style name="textNameCategory">
-        <item name="android:textSize">18sp</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/categoryColor</item>
-    </style>
-
     <style name="textHead">
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/categoryColor</item>
+        <item name="android:textColor">@color/defaultButtonColor</item>
     </style>
 
     <style name="textFilterHead">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/categoryColor</item>
-    </style>
-
-    <style name="textCompare">
-        <item name="android:textSize">24sp</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/categoryColor</item>
+        <item name="android:textColor">@color/defaultButtonColor</item>
     </style>
 
     <style name="textPaymentHeader">
